// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SplitNotificationBar /> error should render general 403 correctly 1`] = `
<div>
  <div
    className="split-notification-bar error"
  >
    <div
      className="split-notification-bar__body"
    >
      <button
        className="split-notification-bar__close-button"
        onClick={[MockFunction]}
      />
      De melding is helaas niet gesplitst. 
      U bent niet bevoegd om deze melding te splitsen.
    </div>
  </div>
</div>
`;

exports[`<SplitNotificationBar /> error should render general 412 correctly 1`] = `
<div>
  <div
    className="split-notification-bar error"
  >
    <div
      className="split-notification-bar__body"
    >
      <button
        className="split-notification-bar__close-button"
        onClick={[MockFunction]}
      />
      De melding is helaas niet gesplitst. 
      U kunt geen meldingen splitsen die al gesplitst zijn.
    </div>
  </div>
</div>
`;

exports[`<SplitNotificationBar /> error should render general error correctly 1`] = `
<div>
  <div
    className="split-notification-bar error"
  >
    <div
      className="split-notification-bar__body"
    >
      <button
        className="split-notification-bar__close-button"
        onClick={[MockFunction]}
      />
      De melding is helaas niet gesplitst. 
      Er is een onbekende fout ontstaan.
    </div>
  </div>
</div>
`;

exports[`<SplitNotificationBar /> success should render 2  items correctly 1`] = `
<div>
  <div
    className="split-notification-bar success"
  >
    <div
      className="split-notification-bar__body"
    >
      <button
        className="split-notification-bar__close-button"
        onClick={[MockFunction]}
      />
      Melding 
      42
       is gesplitst in
      <span
        className="split-notification-bar__link"
        key="43"
      >
         
        <NavLink
          to="/manage/incident/43"
        >
          43
        </NavLink>
      </span>
      <span
        className="split-notification-bar__link"
        key="44"
      >
         
        <NavLink
          to="/manage/incident/44"
        >
          44
        </NavLink>
      </span>
    </div>
  </div>
</div>
`;

exports[`<SplitNotificationBar /> success should render 3 items correctly 1`] = `
<div>
  <div
    className="split-notification-bar success"
  >
    <div
      className="split-notification-bar__body"
    >
      <button
        className="split-notification-bar__close-button"
        onClick={[MockFunction]}
      />
      Melding 
      42
       is gesplitst in
      <span
        className="split-notification-bar__link"
        key="43"
      >
         
        <NavLink
          to="/manage/incident/43"
        >
          43
        </NavLink>
      </span>
      <span
        className="split-notification-bar__link"
        key="44"
      >
         
        <NavLink
          to="/manage/incident/44"
        >
          44
        </NavLink>
      </span>
      <span
        className="split-notification-bar__link"
        key="45"
      >
         
        <NavLink
          to="/manage/incident/45"
        >
          45
        </NavLink>
      </span>
    </div>
  </div>
</div>
`;

exports[`<SplitNotificationBar /> success should render no items correctly 1`] = `<div />`;
